--- a/build.gradle
+++ b/build.gradle
@@ -41,10 +41,10 @@ dependencies {
 
     // QueryDSL
 //    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
-//    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
     implementation "com.querydsl:querydsl-sql:${querydslVersion}"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-//    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 }
 
 tasks.named('test') {
