--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=abcd1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#logging.level.root=DEBUG
+logging.level.root=DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.orm.query.hql=DEBUG
+#logging.level.org.hibernate.orm.query.hql=DEBUG
 #logging.level.org.hibernate.orm.query.sqm.ast=DEBUG
